--- a/style.css
+++ b/style.css
@@ -135,13 +135,14 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #ffffff;
-    padding-top: 25px;
-    padding-bottom: 35px;
+    background-color: #E6DACE;
+    padding-top: 20px;
+    padding-bottom: 50px;
+    margin-top: -5px;
 }
 
 .contenedorInfo {
-    background-color: #ffffff;
+    background-color: #E6DACE;
     width: 85%;
 }
 
@@ -152,7 +153,7 @@ body {
 .servicios h2 {
     font-family: "Poppins";
     font-weight: 700;
-    font-size: 2.5rem;
+    font-size: 3rem;
 }
 
 .contenedorInfo h3 {
@@ -176,13 +177,14 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #E6DACE;
+    background-color: #ffffff;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .subPersonal {
-    padding: 15px 0 25px 0;
+    background-color: #ffffff;
     width: 85%;
-    background-color: #E6DACE;
     text-align: center;
 }
 
